--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,10 @@
     "noEmit": true,
     "jsx": "react-jsx",
 
+    "baseUrl": "./",
     "paths": {
       "*": ["./src/*"]
+      // "types/": [".types/*"]
     }
   },
   "include": ["src"],
